# PROX

./: .gitignore  BUGTRACKER  CMakeLists.txt  README  README.md  index.md
APPLICATIONS/RIGID_BODY/RIGID_BODY_XML2MEL/: CMakeLists.txt
APPLICATIONS/RIGID_BODY/RIGID_BODY_XML2MEL/src/: main.cpp
APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/: CMakeLists.txt
APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/src/: main.cpp
APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/: CMakeLists.txt
APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/include/: soft_body_gui_application.h  soft_body_gui_draw_aabbs.h  soft_body_gui_draw_contacts.h  soft_body_gui_draw_dirichlet_conditions.h  soft_body_gui_draw_traction_conditions.h  soft_body_gui_make_scene.h  soft_body_gui_make_shader_programs.h  soft_body_gui_make_textures.h  soft_body_gui_scene_manager.h  soft_body_gui_scene_object.h  soft_body_gui_update_scene.h  soft_body_gui_widget.h
APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/src/: main.cpp  soft_body_gui_widget.cpp
FOUNDATION/BIG/demo/: CMakeLists.txt
FOUNDATION/BIG/demo/src/: main.cpp
FOUNDATION/BIG/unit_tests/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_agglomerate_vector/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_backward_gauss_seidel/: CMakeLists.txt  unit_big_backward_gauss_seidel.cpp
FOUNDATION/BIG/unit_tests/big_cholesky/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_compute_index_reordering/: CMakeLists.txt  unit_big_compute_index_reordering.cpp
FOUNDATION/BIG/unit_tests/big_compute_index_sets/: CMakeLists.txt  unit_big_compute_index_sets.cpp
FOUNDATION/BIG/unit_tests/big_compute_jacobian/: CMakeLists.txt  unit_big_compute_jacobian.cpp
FOUNDATION/BIG/unit_tests/big_compute_partitioned_jacobian/: CMakeLists.txt  unit_big_compute_partitioned_jacobian.cpp
FOUNDATION/BIG/unit_tests/big_conjugate_gradient/: CMakeLists.txt  unit_big_conjugate_gradient.cpp
FOUNDATION/BIG/unit_tests/big_diag/: CMakeLists.txt  unit_big_diag.cpp
FOUNDATION/BIG/unit_tests/big_forward_gauss_seidel/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_gmres/: CMakeLists.txt  unit_big_gmres.cpp
FOUNDATION/BIG/unit_tests/big_gram_schmidt/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_identity/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_jacobi/: CMakeLists.txt  unit_big_jacobi.cpp
FOUNDATION/BIG/unit_tests/big_lu/: CMakeLists.txt  unit_big_lu.cpp
FOUNDATION/BIG/unit_tests/big_partition_vector/: CMakeLists.txt  unit_big_partition_vector.cpp
FOUNDATION/BIG/unit_tests/big_prod/: CMakeLists.txt  unit_big_prod.cpp
FOUNDATION/BIG/unit_tests/big_prod_add/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_prod_add_rhs/: CMakeLists.txt  unit_big_prod_add_rhs.cpp
FOUNDATION/BIG/unit_tests/big_prod_row/: CMakeLists.txt  unit_big_prod_row.cpp
FOUNDATION/BIG/unit_tests/big_prod_sub/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_prod_sub_rhs/: CMakeLists.txt  unit_big_prod_sub_rhs.cpp
FOUNDATION/BIG/unit_tests/big_prod_trans/: CMakeLists.txt  unit_big_prod_trans.cpp
FOUNDATION/BIG/unit_tests/big_project/: CMakeLists.txt  unit_big_project.cpp
FOUNDATION/BIG/unit_tests/big_pseudoinverse/: CMakeLists.txt  unit_big_pseudoinverse.cpp
FOUNDATION/BIG/unit_tests/big_residual/: CMakeLists.txt
FOUNDATION/BIG/unit_tests/big_shur_system/: CMakeLists.txt  unit_big_shur_system.cpp
FOUNDATION/BIG/unit_tests/big_stop_criteria/: CMakeLists.txt  unit_big_stop_criteria.cpp
FOUNDATION/BIG/unit_tests/big_svd/: CMakeLists.txt  unit_big_svd.cpp
FOUNDATION/BIG/unit_tests/big_symmetric_gauss_seidel/: CMakeLists.txt  unit_big_symmetric_gauss_seidel.cpp
FOUNDATION/CONVEX/unit_tests/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_closest_points/: CMakeLists.txt  convex_closest_points.cpp
FOUNDATION/CONVEX/unit_tests/convex_conservative_advancement/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_constants/: CMakeLists.txt  convex_constants.cpp
FOUNDATION/CONVEX/unit_tests/convex_get_scale/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_growth_distance/: CMakeLists.txt  convex_growth_distance.cpp
FOUNDATION/CONVEX/unit_tests/convex_motion_interpolation/: CMakeLists.txt  convex_motion_interpolation.cpp
FOUNDATION/CONVEX/unit_tests/convex_motion_utils/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_outside_edge_face/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_outside_triangle/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_outside_vertex_edge/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_reduce_edge/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_reduce_tetrahedron/: CMakeLists.txt  convex_reduce_tetrahedron.cpp
FOUNDATION/CONVEX/unit_tests/convex_reduce_triangle/: CMakeLists.txt  convex_reduce_triangle.cpp
FOUNDATION/CONVEX/unit_tests/convex_shapes/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_sign_dist2edge_face_vp/: CMakeLists.txt  convex_sign_dist2edge_face_vp.cpp
FOUNDATION/CONVEX/unit_tests/convex_sign_dist2tri/: CMakeLists.txt
FOUNDATION/CONVEX/unit_tests/convex_sign_dist2vert_edge_vp/: CMakeLists.txt  convex_sign_dist2vert_edge_vp.cpp
FOUNDATION/CONVEX/unit_tests/convex_simplex/: CMakeLists.txt  convex_simplex.cpp
FOUNDATION/CONVEX/unit_tests/convex_simplex_reduce/: CMakeLists.txt  convex_simplex_reduce.cpp
FOUNDATION/GEOMETRY/unit_tests/geometry_contacts_obb_obb/: CMakeLists.txt
FOUNDATION/MESH_ARRAY/demo/: CMakeLists.txt
FOUNDATION/MESH_ARRAY/demo/src/: demo.cpp
FOUNDATION/SPARSE/demo/: CMakeLists.txt
FOUNDATION/SPARSE/demo/src/: demo.cpp
FOUNDATION/SPARSE/unit_tests/sparse_conjugate_gradient/: CMakeLists.txt
FOUNDATION/SPARSE/unit_tests/sparse_fake_transpose/: CMakeLists.txt
FOUNDATION/SPARSE/unit_tests/sparse_io/: CMakeLists.txt
FOUNDATION/SPARSE/unit_tests/sparse_product_crm_vec/: CMakeLists.txt
FOUNDATION/SPARSE/unit_tests/sparse_vector/: CMakeLists.txt
FOUNDATION/TINY/benchmark/: CMakeLists.txt  measure.h  vector_benchmark.h
FOUNDATION/UTIL/unit_tests/util_file_locator/: CMakeLists.txt  util_file_locator.cpp
PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_CMD/: CMakeLists.txt
SIMULATION/HYPER/HYPER/: CMakeLists.txt
(+801 files in other folders)
