INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/CONTENT/CONTENT/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/SIMULATORS/SIMULATORS/include 
  ${PROJECT_SOURCE_DIR}/APPLICATIONS/RIGID_BODY/RIGID_BODY_XML2MEL/include   
  ${Boost_INCLUDE_DIRS}
)

FILE(GLOB 
  RIGID_BODY_XML2MEL_SOURCES
  src/*.cpp 
  )

FILE(GLOB
  RIGID_BODY_XML2MEL_HEADERS
  include/*.h 
  )

FILE(GLOB
  RIGID_BODY_XML2MEL_CFGS
  ${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel/*.cfg
  )

ADD_EXECUTABLE(
  rigid_body_xml2mel 
  ${RIGID_BODY_XML2MEL_SOURCES} 
  ${RIGID_BODY_XML2MEL_HEADERS}
  ${RIGID_BODY_XML2MEL_CFGS}
  )

TARGET_LINK_LIBRARIES(
  rigid_body_xml2mel 
  simulators
  content
  tiny
  simulators
  procedural
  content
  gl3
  tiny
  sparse
  convex
  geometry
  mesh_array
  kdop
  narrow
  broad
  prox
  mass
  util
  tetgen
  tinyxml
  qhull
  ${Boost_SYSTEM_LIBRARIES} 
  ${Boost_FILESYSTEM_LIBRARIES} 
  )

SOURCE_GROUP(Config    FILES ${RIGID_BODY_XML2MEL_CFGS})

SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel")
SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel")
SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel")
SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel")
SET_TARGET_PROPERTIES(rigid_body_xml2mel PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/rigid_body_xml2mel")
