INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/include 
  ${PROJECT_SOURCE_DIR}/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/HYPER/HYPER/include  
  ${Boost_INCLUDE_DIRS}
  )

IF(HAS_DIKUCL)
  INCLUDE_DIRECTORIES(
      ${PROJECT_SOURCE_DIR}/FOUNDATION/DIKUCL/DIKUCL/include 
    )
ENDIF(HAS_DIKUCL)


FILE(GLOB 
  SOFT_BODY_CMD_SOURCES
  src/*.cpp 
  )

FILE(GLOB
  SOFT_BODY_CMD_HEADERS
  include/*.h 
  )

FILE(GLOB
  SOFT_BODY_CMD_CFGS
  ${PROJECT_SOURCE_DIR}/bin/soft_body_cmd/*.cfg
  )

ADD_EXECUTABLE(
  soft_body_cmd
  ${SOFT_BODY_CMD_SOURCES} 
  ${SOFT_BODY_CMD_HEADERS}
  ${SOFT_BODY_CMD_CFGS}
  )

TARGET_LINK_LIBRARIES(
  soft_body_cmd
  soft_body_shared
  kdop
  hyper
  tiny
  sparse
  geometry
  mesh_array
  util
  tetgen
  qhull
  ${Boost_SYSTEM_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARIES}
  )

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES(soft_body_cmd dikucl)
ENDIF(HAS_DIKUCL)

SOURCE_GROUP(Config    FILES ${SOFT_BODY_CMD_CFGS})

SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
