INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/BIG/BIG/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/BIG/demo/include
  ${Boost_INCLUDE_DIRS}
)

FILE(
  GLOB 
  BIG_DEMO_SOURCES
  ${PROJECT_SOURCE_DIR}/FOUNDATION/BIG/demo/src/*.cpp 
  )

FILE(
  GLOB
  BIG_DEMO_HEADERS
  ${PROJECT_SOURCE_DIR}/FOUNDATION/BIG/demo/include/*.h 
  )

ADD_EXECUTABLE(
  big_demo 
  ${BIG_DEMO_SOURCES}  
  ${BIG_DEMO_HEADERS}
)

TARGET_LINK_LIBRARIES(
  big_demo
  big
  )

SET_TARGET_PROPERTIES(big_demo PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(big_demo PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(big_demo PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(big_demo PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(big_demo PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(big_demo PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
