ADD_SUBDIRECTORY( big_agglomerate_vector           )
ADD_SUBDIRECTORY( big_backward_gauss_seidel        )
ADD_SUBDIRECTORY( big_cholesky                     )
ADD_SUBDIRECTORY( big_compute_index_reordering     )
ADD_SUBDIRECTORY( big_compute_index_sets           )
ADD_SUBDIRECTORY( big_compute_jacobian             )
ADD_SUBDIRECTORY( big_compute_partitioned_jacobian )
ADD_SUBDIRECTORY( big_conjugate_gradient           )
ADD_SUBDIRECTORY( big_diag                         )
ADD_SUBDIRECTORY( big_forward_gauss_seidel         )
ADD_SUBDIRECTORY( big_gmres                        )
ADD_SUBDIRECTORY( big_gram_schmidt                 )
ADD_SUBDIRECTORY( big_identity                     )
ADD_SUBDIRECTORY( big_jacobi                       )
ADD_SUBDIRECTORY( big_lu                           )
ADD_SUBDIRECTORY( big_partition_vector             )
ADD_SUBDIRECTORY( big_prod                         )
ADD_SUBDIRECTORY( big_prod_add                     )
ADD_SUBDIRECTORY( big_prod_add_rhs                 )
ADD_SUBDIRECTORY( big_prod_row                     )
ADD_SUBDIRECTORY( big_prod_sub                     )
ADD_SUBDIRECTORY( big_prod_sub_rhs                 )
ADD_SUBDIRECTORY( big_prod_trans                   )
ADD_SUBDIRECTORY( big_project                      )
ADD_SUBDIRECTORY( big_pseudoinverse                )
ADD_SUBDIRECTORY( big_residual                     )
ADD_SUBDIRECTORY( big_shur_system                  )
ADD_SUBDIRECTORY( big_svd                          )
ADD_SUBDIRECTORY( big_stop_criteria                )
ADD_SUBDIRECTORY( big_symmetric_gauss_seidel       )
