ADD_SUBDIRECTORY( convex_constants                )
ADD_SUBDIRECTORY( convex_simplex_reduce           )
ADD_SUBDIRECTORY( convex_motion_utils             )
ADD_SUBDIRECTORY( convex_shapes                   ) 
ADD_SUBDIRECTORY( convex_simplex                  )
ADD_SUBDIRECTORY( convex_sign_dist2tri            )
ADD_SUBDIRECTORY( convex_sign_dist2edge_face_vp   )
ADD_SUBDIRECTORY( convex_sign_dist2vert_edge_vp   )
ADD_SUBDIRECTORY( convex_reduce_edge              )
ADD_SUBDIRECTORY( convex_reduce_triangle          )
ADD_SUBDIRECTORY( convex_reduce_tetrahedron       )
ADD_SUBDIRECTORY( convex_outside_triangle         )
ADD_SUBDIRECTORY( convex_outside_edge_face        )
ADD_SUBDIRECTORY( convex_outside_vertex_edge      )
ADD_SUBDIRECTORY( convex_closest_points           )
ADD_SUBDIRECTORY( convex_conservative_advancement )
ADD_SUBDIRECTORY( convex_motion_interpolation     )
ADD_SUBDIRECTORY( convex_get_scale                )
ADD_SUBDIRECTORY( convex_growth_distance          )
