INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/demo/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include
  ${Boost_INCLUDE_DIRS}
  )

FILE(
  GLOB
  MESH_ARRAY_DEMO_SOURCES
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/demo/src/*.cpp
  )

FILE(
  GLOB
  MESH_ARRAY_DEMO_HEADERS
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/demo/include/*.h
  )

ADD_EXECUTABLE(
  mesh_array_demo
  ${MESH_ARRAY_DEMO_SOURCES}
  ${MESH_ARRAY_DEMO_HEADERS}
  )
  
TARGET_LINK_LIBRARIES(
  mesh_array_demo
  mesh_array
  tiny
  )

SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(mesh_array_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(mesh_array_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(mesh_array_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(mesh_array_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(mesh_array_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin")
