INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/demo/include
  )

FILE(
  GLOB
  SPARSE_DEMO_HEADERS
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/demo/include/*.h
  )

ADD_EXECUTABLE(
  sparse_demo
  src/demo.cpp
  ${SPARSE_DEMO_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  sparse_demo
  sparse
  util
)

