INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/benchmark
  ${Boost_INCLUDE_DIRS}
  )

FILE(
  GLOB
  TINY_BENCHMARK_SOURCES
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/benchmark/*.cpp
  )

FILE(
  GLOB
  TINY_BENCHMARK_HEADERS
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/benchmark/*.h
  )

ADD_EXECUTABLE(
  tiny_benchmark
  ${TINY_BENCHMARK_SOURCES}
  ${TINY_BENCHMARK_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  tiny_benchmark
  util
  tiny
)
